[project]
name = "stats"
version = "0.1.0"
description = "calculate files count and total size"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
stats = "stats:app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
